Fix heading overflow

--- a/src/components/Alert/styles.css
+++ b/src/components/Alert/styles.css
@@ -1,28 +1,25 @@
 .alert {
-    display: flex;
+    --spacing: var(--dui-spacing-medium);
+    --height: 100%;
+
     position: absolute;
     top: 0;
     left: 0;
-    align-items: flex-start;
     visibility: hidden;
     opacity: 0;
     border-radius: var(--dui-radius-border-alerts);
-    padding: calc(var(--dui-spacing-medium) - var(--dui-spacing-small));
+    padding: var(--spacing);
     width: 100%;
     animation: appear var(--dui-duration-transition-medium) ease-in forwards;
     animation-delay: var(--dui-duration-delay-short);
 
-    --height: 100%;
-
     .icon {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         color: inherit;
     }
 
     .content {
-        display: flex;
-        align-items: center;
         align-self: center;
     }
 
@@ -49,6 +46,22 @@
         color: var(--dui-color-text-on-success);
     }
 
+    &.no-spacing {
+        --spacing: 0;
+    }
+
+    &.compact-spacing {
+        --spacing: var(--dui-spacing-small);
+    }
+
+    &.comfortable-spacing {
+        --spacing: var(--dui-spacing-medium);
+    }
+
+    &.loose-spacing {
+        --spacing: var(--dui-spacing-large);
+    }
+
     &.hidden {
         position: initial;
         visibility: visible;
@@ -64,6 +77,7 @@
             position: initial;
             visibility: visible;
             opacity: 0;
+            padding: 0 var(--spacing);
             height: 0;
         }
 
@@ -71,6 +85,7 @@
             position: initial;
             visibility: visible;
             opacity: 1;
+            padding: var(--spacing);
             height: var(--height);
         }
     }
@@ -80,11 +95,13 @@
             position: initial;
             visibility: visible;
             opacity: 1;
+            padding: var(--spacing);
             height: var(--height);
         }
 
         to {
             opacity: 0;
+            padding: 0 var(--spacing);
             height: 0;
         }
     }
